<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/camera"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:text="@string/camera" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/camera"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"

        app:srcCompat="@android:drawable/alert_dark_frame"
        android:layout_below="@+id/camera"/>

    <View
        android:id="@+id/divader"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#7b7b7b"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_below="@+id/imageView"/>

    <TextView
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:text="@string/picture_galerry"
        android:layout_below="@+id/divader"/>

    <Button
        android:id="@+id/choose_image_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/choose"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"/>

    <ImageView
        android:id="@+id/image_view"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/choose_image_btn"/>



</RelativeLayout>